Fix overflow for backend layout

--- a/webroot/css/backend.sass
+++ b/webroot/css/backend.sass
@@ -29,4 +29,5 @@ $menuHoverBackgroundColor: #999
 body
   background-color: $backgroundColor
   @include container
+  overflow: inherit
 
